# skill-toggle

./: .gitignore  LICENSE  Makefile  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yml
cmd/skill-toggle/: main.go
docs/superpowers/specs/: 2026-04-24-go-bubbletea-redesign-design.md  2026-04-27-tui-redesign-aggregated-lazygit.md
internal/cli/: cli.go  cli_test.go  format.go
internal/config/: config.go  config_test.go
internal/skills/: skills.go  skills_test.go
internal/tui/: keymap.go  model.go  tui.go  tui_test.go  update.go  view.go
internal/ui/: ui.go  ui_test.go
internal/update/: update.go
skill_toggle/: __init__.py  cli.py
tests/: test_cli.py
